pydoctor/themes/base/apidocs.css
/* ... */
/* Style for expandable content */

input.tocChildrenToggle {
    display: none;
  }

.lbl-toggle {
    display: block;
    width: 18px;
    font-weight: bold;
    font-family: monospace;
    font-size: 12px;
    text-transform: uppercase;
    text-align: center;
    color: #333;
    /* background: #0069ff; */
    cursor: pointer;
    border-radius: 7px;
    transition: all 0.1s ease-out;
    margin: 0 0 0 0;
    padding: 5px 2px 0 2px;
    color: rgb(163, 163, 163);
    position: absolute;
}

.lbl-toggle::before {
    content: " ";
    display: inline-block;
    border-top: 5px solid transparent;
    border-bottom: 5px solid transparent;
    border-left: 5px solid currentColor;
    vertical-align: middle;
    margin-right: 0.7rem;
    transform: translateY(-2px);
  }

.lbl-toggle:hover {
    color: #333;
  }

.tocChildrenToggle:checked + .lbl-toggle::before {
    transform: rotate(90deg) translateX(-3px);
  }

.expandableContent {
    height: 0px;
    overflow: hidden;
    flex-basis: 100%;
    padding: 0 0 0 8px;
    margin-left: 5px;
    border-left: 1px solid #e7e7e7;
}

.expandableContent > div {
    margin-top: 5px;
}

.tocChildrenToggle:checked ~ .expandableContent {
    height: auto;
}

.tocChildrenToggle:not(:checked) ~ .expandableContent .lbl-toggle {
    position: relative;
}

.tocChildrenToggle:checked + .lbl-toggle {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
    color: #333;
  }

.expandableContent .childrenKindTitle {
    font-size: 14px;
    /* margin-left: 5px; */
}

.expandableItem {
    display: flex;
    flex-wrap: wrap;
}

.expandableItem > code {
    width: calc(100% - 20px)!important;
    margin-left: 18px;
}

/* Special cases to display the current object name in the sidebar */ 
.thisobject a {
    font-weight: bold;
}
.expandableItem label.notExpandable {
    cursor: not-allowed;
}
/* Version modified style */
.rst-versionmodified {
    display: block;
    font-weight: bold;
}

/* Search */

/* clears the ‘X’ from search input for Chrome */
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration { display: none; }

.navlinks > #search-box-container {
    padding: 0 0 8px 15px;
    align-self: flex-end;
    margin-left: auto;
    display: none;
}

#search-results {
    margin-top: 5px;
}

#search-results tr{
    display:block;
    border-bottom: 0.5px solid #CCC;
}

#search-results tr {
    border-bottom: 1px #ddd solid;
    padding-bottom: 1px;
}

#search-results tr td {
    border-left: 1px #ddd solid;
    padding: 2px;
}

#search-results tr td:first-child {
    width: 120px;
}

#search-results tr:last-child{
    border-bottom: none;
}

#search-results tr article, #search-results tr article *{
    display:inline;
}

#search-results section {
    padding: 5px 0 0 8px;
}

.search-help-hidden #search-help-box{
    display: none!important;
}

#search-help-button{
    background-color: #e6e6e6;
}

.search-help-hidden #search-help-button{
    background-color: rgb(255, 255, 255);
}

.search-help-hidden #search-help-button:hover {
    background-color: #e6e6e6;
}

#search-results-container {
    padding: 10px;
    width: 100%;
    max-width: 850px;
    max-height: calc(100vh - 70px);
    right: 0;
    position: absolute;
    overflow-x: hidden;
    overflow-y: scroll;
    background-color: #fbfbfb;
    border: 1px solid #CCC;
    border-radius: 4px;
    z-index: 500;
    margin-top: -9px;
    word-break: break-word;
}

#search-status{
    padding-bottom:2px;
}

#search-buttons{
    float: right;
}

#search-buttons > span {
    padding: 0.3em 0.4em 0.4em;
}

#toggle-search-in-docstrings-checkbox{
    margin-top: -2.5px;
    cursor: pointer;
}

/* Constant values repr */
pre.constant-value              { padding: .5em; }
.rst-variable-linewrap          { color: #604000; font-weight: bold; }
.rst-variable-ellipsis          { color: #604000; font-weight: bold; }
.rst-variable-quote             { color: #604000; font-weight: bold; }

/* Those two are currently not used */
.rst-variable-group             { color: #000000; }
.rst-variable-op                { color: #000000; }

.rst-variable-string            { color: #337ab7; }
.rst-variable-unknown           { color: #a00000; font-weight: bold; }
.rst-re                         { color: #000000; }
.rst-re-char                    { color: #337ab7; }
.rst-re-op                      { color: #fc7844; }
.rst-re-group                   { color: #309078; }
.rst-re-ref                     { color: #890000; }

/* highlight the targeted item with "#" */
#childList a:target ~ .functionHeader, #childList a:target ~ .functionBody{
    background-color: rgb(253, 255, 223);
}
#childList a:target ~ .functionHeader{
    box-shadow: 0px 0px 0px 10px rgb(253, 255, 223);
}
#childList a:target ~ .functionBody{
    box-shadow: -2px -8px 0px 13px rgb(253 255 223);
}
/* in class hierarchy */
#summaryTree a:target ~ div {
    background-color: rgb(253, 255, 223);
    box-shadow: 0px 0px 0px 7px rgb(253, 255, 223);
}

/* deprecations uses a orange text */
.rst-deprecated > .rst-versionmodified{
    color:#aa6708;
}

/* CSS for anchor links */
.headerLink{
    display:none;
    color:black;
    float:right;
    margin-left:5px;
    padding-left:5px;
    padding-right:5px;
}
@media (hover) {
    /* See https://css-tricks.com/annoying-mobile-double-tap-link-issue/ */
    .headerLink:hover{
        text-decoration:none;
        background-color: #ccc;
    }
    #childList > div:hover .headerLink{
        display:inline-block;
    }
}
#childList a:target ~ .functionHeader .headerLink{
    display: inline-block
}

